--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/Obazure/nodejs-to-do#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-graphql": "^0.11.0",
+    "graphql": "^15.3.0",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.5"
   },
